# gosumissue

./: .gitignore  BUILD.bazel  MODULE.bazel  go.mod  go.sum
dep_a/: BUILD.bazel  MODULE.bazel  go.mod  go.sum  something.go
