load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library")

gazelle(name = "gazelle")

go_library(
    name = "gosumissue_lib",
    srcs = ["main.go"],
    importpath = "github.com/zecke/gosumissue",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "gosumissue",
    embed = [":gosumissue_lib"],
    visibility = ["//visibility:public"],
)
